--- a/FinalProject.Web/Views/Shared/_NavBar.cshtml
+++ b/FinalProject.Web/Views/Shared/_NavBar.cshtml
@@ -24,9 +24,24 @@
             <a class="nav-link" asp-controller="User" asp-action="Index">Users</a>   
         </li>
         
-        <!-- place other nav items here --> 
-        <li class="nav-item" asp-condition=@User.Identity.IsAuthenticated>
-            <a class="nav-link" asp-controller="Post" asp-action="Index">Posts</a>   
+        <!-- Post menu item --> 
+        <li class="nav-item">
+            <a class="nav-link" asp-controller="Post" asp-action="Index">Posts</a>
+        </li>
+
+        <!-- Events dropdown menu item -->
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="eventsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Events
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="eventsDropdown">
+                <li><a class="dropdown-item" asp-controller="Event" asp-action="FutureEvents">Future Events</a></li>
+                <li><a class="dropdown-item" asp-controller="Event" asp-action="PastEvents">Past Events</a></li>
+                @if (User.Identity.IsAuthenticated)
+                    {
+                        <li><a class="dropdown-item" asp-controller="Event" asp-action="Calendar">Calendar</a></li>
+                    }
+            </ul>
         </li>
 
         <!-- example dropdown menu item -->
