--- a/FinalProject.Web/Views/Shared/_Layout.cshtml
+++ b/FinalProject.Web/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
 
     <footer class="border-top footer text-muted text-center">
         <div class="container">
-            &copy; @DateTime.Now.Year - FinalProject.Web - <a asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; @DateTime.Now.Year - Woof & Wander - <a asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
