changed posts to community and added Events to navbar

--- a/FinalProject.Web/Views/Post/Index.cshtml
+++ b/FinalProject.Web/Views/Post/Index.cshtml
@@ -1,6 +1,6 @@
 @model Paged<Post>
 
-<h3 class="mb-3">Post List</h3>
+<h3 class="mb-3">Woof & Wander Community</h3>
 
 <a class="btn btn-primary" asp-controller="Post" asp-action="Create">Create</a>
 
