Commented out code and changed views

--- a/FinalProject.Web/Views/Event/Future.cshtml
+++ b/FinalProject.Web/Views/Event/Future.cshtml
@@ -1,4 +1,4 @@
-@model Paged<Event>
+@* @model Paged<Event>
 
 <h3 class ="mb-3">Future Events</h3>
 
@@ -51,4 +51,4 @@
     </tbody>
 </table>
 
-<vc:paginator pages="@Model.Pages" />
+<vc:paginator pages="@Model.Pages" /> *@
