--- a/FinalProject.Web/Views/Event/Past.cshtml
+++ b/FinalProject.Web/Views/Event/Past.cshtml
@@ -1,4 +1,4 @@
-@model Paged<Event>
+@* @model Paged<Event>
 
 <h3 class="mb-3">Past Events</h3>
 
@@ -55,5 +55,5 @@
 
 @section Scripts {
     @* Ensure HTMX is included *@
-    <script src="https://unpkg.com/htmx.org@1.6.1"></script>
-}
+    @* <script src="https://unpkg.com/htmx.org@1.6.1"></script>
+} *@
