--- a/FinalProject.Web/Views/Event/Create.cshtml
+++ b/FinalProject.Web/Views/Event/Create.cshtml
@@ -38,6 +38,12 @@
             <span asp-validation-for="Description" class="text-danger"></span>
         </div>
 
+        <div class="mt-3">
+            <label asp-for="ImageUrl" class="form-label"></label>
+            <input asp-for="ImageUrl" type="url" class="form-control" />
+            <span asp-validation-for="ImageUrl" class="text-danger"></span>
+        </div>
+
         <div class=" mt-3">
             <input type="submit" value="Create" class="btn btn-primary" />
             
