--- a/FinalProject.Web/Views/Shared/_NavBar.cshtml
+++ b/FinalProject.Web/Views/Shared/_NavBar.cshtml
@@ -4,7 +4,9 @@
   <div class="container-fluid">
 
     <!-- change project title here -->
-    <a class="navbar-brand" href="#">Woof & Wander</a>
+    <a class="navbar-brand" href="#">
+        <img src="~/images/logo/logo.jpg" alt="Woof & Wander Logo" class="navbar-logo d-inline-block align-text-top">
+        Woof & Wander</a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
