--- a/FinalProject.Web/Views/Post/Create.cshtml
+++ b/FinalProject.Web/Views/Post/Create.cshtml
@@ -10,28 +10,31 @@
     
     <h3 class="my-3 mx-auto">Create Post</h3>
     
-    <form asp-action="Create" method="post">
+    <form asp-action="Create" method="post" enctype="multipart/form-data">
 
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-        <div class="">
+        <div>
             <label asp-for="Title" class="form-label"> Title</label>
             <input asp-for="Title" class="form-control" />
             <span asp-validation-for="Title" class="text-danger"></span>
         </div>
 
-        <div class=" mt-3">
+        <div class="mt-3">
             <label asp-for="Body" class="form-label"> Body</label>
             <textarea asp-for="Body" class="form-control"></textarea>
             <span asp-validation-for="Body" class="text-danger"></span>
         </div>
 
-        <div class=" mt-3">
+        <div class="mt-3">
+            <label class="form-label" for="CommentImage">Upload Image</label>
+            <input type="file" name="CommentImage" class="form-control" accept="image/*" />
+        </div>
+
+        <div class="mt-3">
             <input type="submit" value="Create" class="btn btn-primary" />
-            
             <a class="btn btn-link ms-3" asp-controller="Post" asp-action="Index">Cancel</a>
         </div>
-            
     </form>
     
 </div>
