--- a/FinalProject.Web/Views/Post/Index.cshtml
+++ b/FinalProject.Web/Views/Post/Index.cshtml
@@ -19,19 +19,49 @@
                 User
                 <vc:sort-link column="user.name" />
             </th>
-        </tr>
-
-        </tr>
+            <th>Actions</th>
         </tr>
     </thead>
     <tbody>
-        @foreach (var p in Model.Data)
+        @foreach (var post in Model.Data)
         {
             <tr>
-                <td>@p.Id</td>
-                <td>@p.Title</td>
-                <td>@p.User.Name</td>
+                <td>@post.Id</td>
+                <td>@post.Title</td>
+                <td>@post.User.Name</td>
+                <td>
+                    <a class="btn btn-secondary" asp-controller="Post" asp-action="Details" asp-route-id="@post.Id">Details</a>
+                    <!--  authorisation check -->
+                        @if (User.IsInRole("admin"))
+
+                        {
+                            <a asp-action="Delete" asp-route-id=@post.Id>
+                                <i class="bi bi-trash" title="delete post" aria-label="delete post"></i>
+                            </a>
+                        }
+                </td>
             </tr>
+            @* Delete Modal for each post*@
+            <div class="modal fade" id="deleteModal-@post.Id" tabindex="-1" aria-labelledby="deleteModalLabel-@post.Id" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="deleteModalLabel-@post.Id">Confirm Delete</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            Are you sure you want to delete this post?
+                        </div>
+                        <div class="modal-footer">
+                            <form asp-action="Delete" method="post">
+                                <input type="hidden" name="id" value="@post.Id"/>
+                                <button type="submit" class="btn btn-danger">Delete</button>
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
         }
     </tbody>
 </table>
