--- a/FinalProject.Web/Views/Shared/_NavBar.cshtml
+++ b/FinalProject.Web/Views/Shared/_NavBar.cshtml
@@ -1,9 +1,9 @@
  <!-- replace navbar-dark bg-dark with navbar-light bg-white to change to light navbar -->
- <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-lg rounded mb-3">
+ <nav class="navbar navbar-expand-lg navbar-light custom-green shadow-lg rounded mb-3">
        
   <div class="container-fluid">
 
-    <!-- change project title here -->
+    <!-- Woof & Wander -->
     <a class="navbar-brand" href="#">
         <img src="~/images/logo/logo.jpg" alt="Woof & Wander Logo" class="navbar-logo d-inline-block align-text-top">
         Woof & Wander</a>
