--- a/FinalProject.Web/Views/Shared/_NavBar.cshtml
+++ b/FinalProject.Web/Views/Shared/_NavBar.cshtml
@@ -47,6 +47,20 @@
             </ul>
         </li>
 
+        <!-- Recommendations dropdown menu item -->
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Recommendations
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" asp-controller="Home" asp-action="Products">Products</a></li>
+                <li><a class="dropdown-item" asp-controller="Home" asp-action="Recipes">Recipes</a></li>
+                <li><a class="dropdown-item" asp-controller="Home" asp-action="Training">Training</a></li>
+                <li><a class="dropdown-item" asp-controller="Home" asp-action="Vets">Vets</a></li>
+                <li><a class="dropdown-item" asp-controller="Home" asp-action="Locations">Locations</a></li>
+            </ul>
+        </li>
+
         <!-- example dropdown menu item -->
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
