--- a/FinalProject.Web/Views/Home/Privacy.cshtml
+++ b/FinalProject.Web/Views/Home/Privacy.cshtml
@@ -1,87 +1,124 @@
-﻿<div class="text-center">
-    <h1>Woof & Wander Privacy Page</h1>
-</div>
+﻿<div class="privacy-policy">
+    <div class="content-wrapper">
+        <h1 class="text-center">Woof & Wander Privacy Policy</h1>
+    </div>
 
-<!-- divider for sections-->
-<hr class="section-divider">
+    <!-- divider for sections-->
+    <hr class="section-divider">
 
-<div class="container mt-5 privacy-policy">
-    <div class="row">
-        <div class="col-4">
-            <nav id="navbar-example3" class="h-100 flex-column align-items-stretch pe-4 border-end">
-                <nav class="nav nav-pills flex-column">
-                    <a class="nav-link" href="#introduction">Introduction</a>
-                    <a class="nav-link" href="#information-collection">Information We Collect</a>
-                    <a class="nav-link" href="#use-of-information">How We Use Your Information</a>
-                    <a class="nav-link" href="#data-protection">How We Protect Your Data</a>
-                    <a class="nav-link" href="#your-rights">Your Rights</a>
-                    <a class="nav-link" href="#contact">Contact Us</a>
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-4">
+                <nav id="navbar-example3" class="h-100 flex-column align-items-stretch pe-4 border-end">
+                    <nav class="nav nav-pills flex-column">
+                        <a class="nav-link" href="#introduction">Introduction</a>
+                        <a class="nav-link" href="#information-collection">Information We Collect</a>
+                        <a class="nav-link" href="#use-of-information">How We Use Your Information</a>
+                        <a class="nav-link" href="#data-protection">How We Protect Your Data</a>
+                        <a class="nav-link" href="#your-rights">Your Rights</a>
+                        <a class="nav-link" href="#contact">Contact Us</a>
+                    </nav>
                 </nav>
-            </nav>
-        </div>
+            </div>
 
-        <div class="col-8">
-            <div data-bs-spy="scroll" data-bs-target="#navbar-example3" data-bs-smooth-scroll="true" class="scrollspy-example" tabindex="0">
-                <div id="introduction" class="mb-4">
-                    <h4>Introduction</h4>
-                    <p>At <strong>Woof & Wander</strong>, we value your privacy and are committed to protecting your personal information. This policy outlines how we collect, use, and safeguard your data.</p>
-                    <p>We are dedicated to ensuring that your personal information is used responsibly and in accordance with applicable data protection laws. Your trust is paramount to us, and we strive to be transparent about our practices regarding your information.</p>
-                    <p>We encourage you to read this policy carefully to understand our practices and your rights concerning your personal information.</p>
-                </div>
-                
-                <div id="information-collection" class="mb-4">
-                    <h4>Information We Collect</h4>
-                    <p>We collect various types of information to provide and improve our services, including:</p>
-                    <ul>
-                        <li><strong>Account Information:</strong> This includes your name, email address, and any other details you provide when registering for an account. This information is essential for managing your account and ensuring you have access to all features of our platform.</li>
-                        <li><strong>Community Activity:</strong> We gather information about your interactions within our community, including posts, comments, and photos shared in forums and event galleries. This helps us to foster a vibrant community and enhance user engagement.</li>
-                        <li><strong>Event Data:</strong> When you participate in meet-ups, we collect location and attendance information to improve our event planning and to offer personalized recommendations for future events.</li>
-                        <li><strong>Technical Data:</strong> We automatically collect certain technical information about your device and usage of our website. This includes your IP address, browser type, and the pages you visit. This information helps us improve the performance and usability of our website.</li>
-                        <li><strong>Feedback:</strong> Any feedback you provide, such as survey responses or reviews, helps us understand your experience and preferences.</li>
-                    </ul>
-                </div>
+            <div class="col-8">
+                <div data-bs-spy="scroll" data-bs-target="#navbar-example3" data-bs-smooth-scroll="true"
+                    class="scrollspy-example" tabindex="0">
+                    <div id="introduction" class="mb-4">
+                        <h4>Introduction</h4>
+                        <p>At <strong>Woof & Wander</strong>, we value your privacy and are committed to protecting your
+                            personal information. This policy outlines how we collect, use, and safeguard your data.</p>
+                        <p>We are dedicated to ensuring that your personal information is used responsibly and in
+                            accordance with applicable data protection laws. Your trust is paramount to us, and we
+                            strive to be transparent about our practices regarding your information.</p>
+                        <p>We encourage you to read this policy carefully to understand our practices and your rights
+                            concerning your personal information.</p>
+                    </div>
 
-                <div id="use-of-information" class="mb-4">
-                    <h4>How We Use Your Information</h4>
-                    <p>Your information is vital to our operations and is used in various ways, including:</p>
-                    <ul>
-                        <li>To create and manage your account within the platform, allowing you to access features and functionalities tailored to your preferences.</li>
-                        <li>To facilitate your participation in events, forums, and photo galleries, enhancing your community experience.</li>
-                        <li>To send you updates about events, community activities, and other relevant information that may interest you.</li>
-                        <li>To improve our services and provide a better user experience by analyzing user behavior and preferences.</li>
-                        <li>To conduct research and analysis to help us understand our users' needs and improve our offerings.</li>
-                    </ul>
-                </div>
+                    <div id="information-collection" class="mb-4">
+                        <h4>Information We Collect</h4>
+                        <p>We collect various types of information to provide and improve our services, including:</p>
+                        <ul>
+                            <li><strong>Account Information:</strong> This includes your name, email address, and any
+                                other details you provide when registering for an account. This information is essential
+                                for managing your account and ensuring you have access to all features of our platform.
+                            </li>
+                            <li><strong>Community Activity:</strong> We gather information about your interactions
+                                within our community, including posts, comments, and photos shared in forums and event
+                                galleries. This helps us to foster a vibrant community and enhance user engagement.</li>
+                            <li><strong>Event Data:</strong> When you participate in meet-ups, we collect location and
+                                attendance information to improve our event planning and to offer personalized
+                                recommendations for future events.</li>
+                            <li><strong>Technical Data:</strong> We automatically collect certain technical information
+                                about your device and usage of our website. This includes your IP address, browser type,
+                                and the pages you visit. This information helps us improve the performance and usability
+                                of our website.</li>
+                            <li><strong>Feedback:</strong> Any feedback you provide, such as survey responses or
+                                reviews, helps us understand your experience and preferences.</li>
+                        </ul>
+                    </div>
 
-                <div id="data-protection" class="mb-4">
-                    <h4>How We Protect Your Data</h4>
-                    <p>We take appropriate measures to ensure your personal information is secure and protected from unauthorized access, use, or disclosure. We implement a variety of security measures, including:</p>
-                    <ul>
-                        <li>Data Encryption: We encrypt sensitive information to protect it during transmission.</li>
-                        <li>Access Controls: We restrict access to your personal information to authorized personnel only.</li>
-                        <li>Regular Security Assessments: We regularly review our security practices to ensure your data is safeguarded.</li>
-                        <li>Data Retention: We retain your personal information only as long as necessary to fulfill the purposes outlined in this policy or as required by law.</li>
-                    </ul>
-                    <p>Your data will never be shared with third parties without your explicit consent, except in cases where we are legally required to do so.</p>
-                </div>
+                    <div id="use-of-information" class="mb-4">
+                        <h4>How We Use Your Information</h4>
+                        <p>Your information is vital to our operations and is used in various ways, including:</p>
+                        <ul>
+                            <li>To create and manage your account within the platform, allowing you to access features
+                                and functionalities tailored to your preferences.</li>
+                            <li>To facilitate your participation in events, forums, and photo galleries, enhancing your
+                                community experience.</li>
+                            <li>To send you updates about events, community activities, and other relevant information
+                                that may interest you.</li>
+                            <li>To improve our services and provide a better user experience by analyzing user behavior
+                                and preferences.</li>
+                            <li>To conduct research and analysis to help us understand our users' needs and improve our
+                                offerings.</li>
+                        </ul>
+                    </div>
 
-                <div id="your-rights" class="mb-4">
-                    <h4>Your Rights</h4>
-                    <p>You have several rights concerning your personal information, including:</p>
-                    <ul>
-                        <li>Access: You have the right to request a copy of your personal information we hold.</li>
-                        <li>Rectification: You can request that we correct any inaccurate or incomplete data.</li>
-                        <li>Deletion: You may request the deletion of your data from our systems under certain conditions.</li>
-                        <li>Restriction: You can request that we restrict the processing of your data in specific situations.</li>
-                        <li>Portability: You have the right to request the transfer of your personal information to another service provider.</li>
-                        <li>Withdraw Consent: If we are processing your data based on consent, you have the right to withdraw that consent at any time.</li>
-                    </ul>
-                </div>
+                    <div id="data-protection" class="mb-4">
+                        <h4>How We Protect Your Data</h4>
+                        <p>We take appropriate measures to ensure your personal information is secure and protected from
+                            unauthorized access, use, or disclosure. We implement a variety of security measures,
+                            including:</p>
+                        <ul>
+                            <li>Data Encryption: We encrypt sensitive information to protect it during transmission.
+                            </li>
+                            <li>Access Controls: We restrict access to your personal information to authorized personnel
+                                only.</li>
+                            <li>Regular Security Assessments: We regularly review our security practices to ensure your
+                                data is safeguarded.</li>
+                            <li>Data Retention: We retain your personal information only as long as necessary to fulfill
+                                the purposes outlined in this policy or as required by law.</li>
+                        </ul>
+                        <p>Your data will never be shared with third parties without your explicit consent, except in
+                            cases where we are legally required to do so.</p>
+                    </div>
 
-                <div id="contact" class="mb-4">
-                    <h4>Contact Us</h4>
-                    <p>If you have any questions, concerns, or requests regarding this privacy policy or your personal information, please contact us at <a href="mailto:support@woofandwander.com">support@woofandwander.com</a>.</p>
-                    <p>We are committed to addressing your inquiries promptly and transparently. Thank you for trusting us with your information.</p>
+                    <div id="your-rights" class="mb-4">
+                        <h4>Your Rights</h4>
+                        <p>You have several rights concerning your personal information, including:</p>
+                        <ul>
+                            <li>Access: You have the right to request a copy of your personal information we hold.</li>
+                            <li>Rectification: You can request that we correct any inaccurate or incomplete data.</li>
+                            <li>Deletion: You may request the deletion of your data from our systems under certain
+                                conditions.</li>
+                            <li>Restriction: You can request that we restrict the processing of your data in specific
+                                situations.</li>
+                            <li>Portability: You have the right to request the transfer of your personal information to
+                                another service provider.</li>
+                            <li>Withdraw Consent: If we are processing your data based on consent, you have the right to
+                                withdraw that consent at any time.</li>
+                        </ul>
+                    </div>
+
+                    <div id="contact" class="mb-4">
+                        <h4>Contact Us</h4>
+                        <p>If you have any questions, concerns, or requests regarding this privacy policy or your
+                            personal information, please contact us at <a
+                                href="mailto:support@woofandwander.com">support@woofandwander.com</a>.</p>
+                        <p>We are committed to addressing your inquiries promptly and transparently. Thank you for
+                            trusting us with your information.</p>
+                    </div>
                 </div>
             </div>
         </div>
